  and restored between sessions.  INFO should be the normal state to keep the
  rr_system.log file in-check.
- Moved the COM port Auto Refresh checkbox to the Settings menu.
- Added a Logger startup Progress Bar as loading plugins sometimes takes time.
- Added colour to "Log to File" button. Red when recording and green when not.
- Added colour to "Un-select ALL" button.  Yellow so it stands out.
  * Button colours may not appear correctly as this is platform dependent. 
- Changed "Log to File" keyboard shortcut from F1 to Spacebar.
--- Editor ---
- Set JInternalFrame.isPalette in TableFarme.java so table titles are visible on
  Mac OS.
- Added a Checksum recalculation option when saving ROM images that have a bad Checksum
  (re: Diesel ROMs seem to have an invalid fifth Checksum)
  

0.5.3b RC10 (09/12/2011)
------------------------

--- Editor ---
- Added support for multiple-state switches.  Switch Tables will now use
  Radio Buttons rather than a Checkbox.
- Added ECU definition data validation for Switch Tables.  If the ROM image data
  does not match one of the switch states according to the definition then a
  warning is presented and the table is locked from editing.
- Added ROM Checksum validation on image open for 32 bit ROMs.  An ERROR message
  is presented warning not to use the ROM image as it may be corrupt.
- Added ROM Checksum calculation for 32 bit ROMs.  Upon file save the new
  Checksums (if not previously disabled) are written to the ROM.
- Added a ROM Edit Stamp to 32 bit ROMs consisting of the YYMMDD and an
  incremental count value.  This Edit Stamp is displayed in the View->ROM
  properties menu item.
- Fixed the missing Table Tree problem when running RomRaider on systems
  using IcedTea or OpenJDK JVM.
--- Logger ---
- Added more selections to the Right-click menu associated with the LogFile text
  field.
- Made Fast Polling the default mode for the Logger connection.

0.5.3b RC9 (06/30/2011)
-----------------------

--- Logger ---